--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
-*.py[cod]
-*$py.class
+*.pyc
+*.$py.class
 
 # C extensions
 *.so
@@ -9,6 +9,7 @@ __pycache__/
 # Distribution / packaging
 .Python
 build/
+develop-eggs/
 dist/
 downloads/
 eggs/
@@ -19,9 +20,12 @@ parts/
 sdist/
 var/
 wheels/
+pip-wheel-metadata/
+share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+MANIFEST
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -40,8 +44,12 @@ htmlcov/
 .coverage
 .coverage.*
 .cache
-.pytest_cache/
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
 .hypothesis/
+.pytest_cache/
 
 # Environments
 .env
@@ -52,36 +60,9 @@ ENV/
 env.bak/
 venv.bak/
 
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Sublime Text
-*.sublime-project
-*.sublime-workspace
-
-# VS Code
-.vscode/
-
-# IDEs and editors
+# IDE-specific
 .idea/
-
-# Secrets
-*.env
-.env.*
-secrets.py
-
-# Log files
-*.log
-
+.vscode/
+*.swp
+*.swo
+*~
