--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,4 @@
-# Core dependencies
-fastapi
-langchain
-langchain-community
-langchain-core
-langchain-openai
+openai
 python-dotenv
-
-# For development and testing
 pytest
-flake8
-black
-
+pytest-mock
